--- a/gg220527_var_decomp.ipynb
+++ b/gg220527_var_decomp.ipynb
@@ -6,7 +6,30 @@
     "id": "VPTqP9OGouov"
    },
    "source": [
-    "# Monod demonstration: Noise decompositions "
+    "# *Monod* demonstration: calculating noise decompositions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We ran the *Monod* inference pipeline on eight pre-clustered mouse brain cell datasets, disaggregated into GABAergic and glutamatergic cell types. Each dataset was fit using the bursty model for transcriptional variation, coupled to a Poisson process for cDNA formation.\n",
+    "\n",
+    "Given raw data, we can apply a non-parametric normalization and variance stabilization procedure to, hypothetically, reduce technical variation and make different genes more comparable. Further, given a full model fit and its maximum likelihood parameters, we can calculate plug-in estimates of the relative variance contributions from intrinsic (discrete) noise, extrinsic (bursty) noise, and technical (sequencing) noise."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Metadata and prerequisites"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define the dataset metadata and disk locations."
    ]
   },
   {
@@ -84,60 +107,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['./fits/gg_220527_021_allen_celltypes_1/allen_A08_gaba/Bursty_Poisson_20x21/grid_scan_results_upd.res',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_A08_glu/Bursty_Poisson_20x21/grid_scan_results_upd.res',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_B01_gaba/Bursty_Poisson_20x21/grid_scan_results_upd.res',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_B01_glu/Bursty_Poisson_20x21/grid_scan_results_upd.res',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_B08_gaba/Bursty_Poisson_20x21/grid_scan_results_upd.res',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_B08_glu/Bursty_Poisson_20x21/grid_scan_results_upd.res',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_C01_gaba/Bursty_Poisson_20x21/grid_scan_results_upd.res',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_C01_glu/Bursty_Poisson_20x21/grid_scan_results_upd.res']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sr_strings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['./fits/gg_220527_021_allen_celltypes_1/allen_A08_gaba/raw.sd',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_A08_glu/raw.sd',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_B01_gaba/raw.sd',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_B01_glu/raw.sd',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_B08_gaba/raw.sd',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_B08_glu/raw.sd',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_C01_gaba/raw.sd',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_C01_glu/raw.sd']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sd_strings"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -178,54 +147,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Noise computations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are interested in the relationship between the noise eliminated by the normalization and the sources of variance in the mechanistic fits. Therefore, we compute the amount of noise *eliminated* by the PFlog1pPF normalization on the raw spliced count data, and compare it to the amount of noise resulting from *biological* sources according to the fit. If the two are correlated, then it appears that normalization mostly eliminates biological variation; if they are anti-correlated, then normalization mostly eliminates technical variation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "f_tech_naive = []\n",
-    "f_tech_mech = []\n",
+    "f_mech = []\n",
     "\n",
     "for j in range(n_datasets):\n",
     "    f_tech_naive.append(sd_arr[j].get_noise_decomp()[:,1,1])\n",
     "    sr_arr[j].find_sampling_optimum()\n",
     "    d = sr_arr[j].get_noise_decomp()\n",
-    "    f_tech_mech.append(d[:,1,1]) #combination of bursting noise\n",
+    "    f_mech.append(d[:,1,1]) #bursting noise\n",
     "    \n",
     "f_tech_naive = np.asarray(f_tech_naive)\n",
-    "f_tech_mech = np.asarray(f_tech_mech)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.25872044,  0.15736396, -0.14965083, ...,  0.38392341,\n",
-       "         0.12013684,  0.42624008],\n",
-       "       [ 0.78355624,  0.22045938,  0.08141265, ...,  0.45236168,\n",
-       "         0.22910647,  0.58638782],\n",
-       "       [ 0.25066739,  0.12071181,  0.01022452, ...,  0.16935079,\n",
-       "         0.02475807,  0.21377808],\n",
-       "       ...,\n",
-       "       [ 0.79860735,  0.2388633 ,  0.10038526, ...,  0.4550652 ,\n",
-       "         0.24194862,  0.59446893],\n",
-       "       [ 0.34546447,  0.18359792,  0.03111161, ...,  0.25507426,\n",
-       "         0.13032333,  0.34703429],\n",
-       "       [ 0.73234068,  0.17498778,  0.03921816, ...,  0.28914261,\n",
-       "         0.1578533 ,  0.457953  ]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f_tech_naive"
+    "f_mech = np.asarray(f_mech)"
    ]
   },
   {
@@ -295,9 +246,16 @@
    "source": [
     "plt.figure(figsize=(8,5))\n",
     "for j in range(n_datasets):\n",
-    "    plt.hist(f_tech_mech[j],nbin,alpha=0.2,density=True,facecolor=Demuth[j%len(Demuth)])\n",
+    "    plt.hist(f_mech[j],nbin,alpha=0.2,density=True,facecolor=Demuth[j%len(Demuth)])\n",
     "plt.xlabel(r'CV$^2$ fraction attributed to biological noise',fontsize=fs)\n",
     "plt.ylabel('Density',fontsize=fs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The result for these (highly homogeneous) datasets appears to suggest that the normalization procedure mostly eliminates biological noise. However, this interpretation is mostly qualitative, because the procedure is not guaranteed to reduce variance, and sometimes increases it. For all other datasets we have investigated, it greatly increases the coefficient of variation."
    ]
   },
   {
@@ -328,7 +286,7 @@
    "source": [
     "plt.figure(figsize=(8,5))\n",
     "for j in range(n_datasets):\n",
-    "    plt.scatter(f_tech_mech[j],f_tech_naive[j],s=3,alpha=0.9,c=Demuth[j%len(Demuth)])\n",
+    "    plt.scatter(f_mech[j],f_tech_naive[j],s=3,alpha=0.9,c=Demuth[j%len(Demuth)])\n",
     "plt.plot([0,1],[0,1],'--',c='crimson',linewidth=4)\n",
     "plt.xlabel(r'CV$^2$ fraction attributed to biological noise',fontsize=fs)\n",
     "plt.ylabel(r'CV$^2$ fraction removed by PFlog1pPF',fontsize=fs)\n",
@@ -358,13 +316,6 @@
     "t2 = time.time()\n",
     "print('Runtime: {:.0f} seconds.'.format(t2-t1))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
