--- a/gg220529_burst_const_comparison.ipynb
+++ b/gg220529_burst_const_comparison.ipynb
@@ -3,20 +3,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "colab_type": "text",
-    "id": "view-in-github"
-   },
-   "source": [
-    "<a href=\"https://colab.research.google.com/github/gennadygorin/seq-cme-technoise/blob/dev/gg220406_refactor.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "VPTqP9OGouov"
    },
    "source": [
-    "# *Monod* demonstration: distinguishing the NB and Poisson models"
+    "# *Monod* demonstration: distinguishing bursty and constitutive models of transcriptional variation"
    ]
   },
   {
@@ -25,7 +15,11 @@
     "id": "d2qrzWG0_Yqm"
    },
    "source": [
-    "In the current notebook, we run the *Monod* pipeline on pre-clustered mouse brain cell data, separately fitting the GABAergic and glutamatergic cell types to the constitutive and bursty models."
+    "We ran the *Monod* inference pipeline on thirteen datasets: pre-clustered mouse brain cell data, disaggregated into GABAergic and glutamatergic cell types, and five 10X Genomics mouse tissue samples. Each dataset was fit using the bursty and constitutive models for transcriptional variation, coupled to a Poisson process for cDNA formation.\n",
+    "\n",
+    "Given maximum likelihood estimates under each model, we can apply the standard Akaike Information Criterion framework to attempt to assign probabilities to the models. These estimates are necessarily incomplete, as they do not take into account the parameter uncertainties; further, they appear to overestimate confidence in model selections. However, this is an essential first step toward exploring model ensembles. \n",
+    "\n",
+    "We find that the Poissonian constitutive model is overwhelmingly less probable than the overdispersed bursty model."
    ]
   },
   {
@@ -122,38 +116,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['./fits/gg_220527_021_allen_celltypes_1/allen_A08_gaba/raw.sd',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_A08_glu/raw.sd',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_B01_gaba/raw.sd',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_B01_glu/raw.sd',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_B08_gaba/raw.sd',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_B08_glu/raw.sd',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_C01_gaba/raw.sd',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_C01_glu/raw.sd',\n",
-       " './fits/gg_220526_021_modelcomp_1/heart_1k_v3/raw.sd',\n",
-       " './fits/gg_220526_021_modelcomp_1/heart_10k_v3/raw.sd',\n",
-       " './fits/gg_220526_021_modelcomp_1/neuron_1k_v3/raw.sd',\n",
-       " './fits/gg_220526_021_modelcomp_1/neuron_10k_v3/raw.sd',\n",
-       " './fits/gg_220526_021_modelcomp_1/brain_5k_v3/raw.sd']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sd_strings"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
@@ -162,81 +124,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['./fits/gg_220527_021_allen_celltypes_1/allen_A08_gaba/Constitutive_Poisson_20x21/grid_scan_results.res',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_A08_glu/Constitutive_Poisson_20x21/grid_scan_results.res',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_B01_gaba/Constitutive_Poisson_20x21/grid_scan_results.res',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_B01_glu/Constitutive_Poisson_20x21/grid_scan_results.res',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_B08_gaba/Constitutive_Poisson_20x21/grid_scan_results.res',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_B08_glu/Constitutive_Poisson_20x21/grid_scan_results.res',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_C01_gaba/Constitutive_Poisson_20x21/grid_scan_results.res',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_C01_glu/Constitutive_Poisson_20x21/grid_scan_results.res',\n",
-       " './fits/gg_220526_021_modelcomp_1/heart_1k_v3/Constitutive_Poisson_20x21/grid_scan_results.res',\n",
-       " './fits/gg_220526_021_modelcomp_1/heart_10k_v3/Constitutive_Poisson_20x21/grid_scan_results.res',\n",
-       " './fits/gg_220526_021_modelcomp_1/neuron_1k_v3/Constitutive_Poisson_20x21/grid_scan_results.res',\n",
-       " './fits/gg_220526_021_modelcomp_1/neuron_10k_v3/Constitutive_Poisson_20x21/grid_scan_results.res',\n",
-       " './fits/gg_220526_021_modelcomp_1/brain_5k_v3/Constitutive_Poisson_20x21/grid_scan_results.res']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "result_strings_constitutive"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['./fits/gg_220527_021_allen_celltypes_1/allen_A08_gaba/Bursty_Poisson_20x21/grid_scan_results.res',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_A08_glu/Bursty_Poisson_20x21/grid_scan_results.res',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_B01_gaba/Bursty_Poisson_20x21/grid_scan_results.res',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_B01_glu/Bursty_Poisson_20x21/grid_scan_results.res',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_B08_gaba/Bursty_Poisson_20x21/grid_scan_results.res',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_B08_glu/Bursty_Poisson_20x21/grid_scan_results.res',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_C01_gaba/Bursty_Poisson_20x21/grid_scan_results.res',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_C01_glu/Bursty_Poisson_20x21/grid_scan_results.res',\n",
-       " './fits/gg_220526_021_modelcomp_1/heart_1k_v3/Bursty_Poisson_20x21/grid_scan_results_upd.res',\n",
-       " './fits/gg_220526_021_modelcomp_1/heart_10k_v3/Bursty_Poisson_20x21/grid_scan_results_upd.res',\n",
-       " './fits/gg_220526_021_modelcomp_1/neuron_1k_v3/Bursty_Poisson_20x21/grid_scan_results_upd.res',\n",
-       " './fits/gg_220526_021_modelcomp_1/neuron_10k_v3/Bursty_Poisson_20x21/grid_scan_results_upd.res',\n",
-       " './fits/gg_220526_021_modelcomp_1/brain_5k_v3/Bursty_Poisson_20x21/grid_scan_results_upd.res']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result_strings_bursty"
+    "## AIC weight computation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Post-processing"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, we iterate over the results for the bursty model, identify the parameter optima, and compute conditional confidence intervals."
+    "Now, we iterate over the results for the two models, identify the parameter optima, and compute Akaike weights according to the procedure in Burnham and Anderson (2002)."
    ]
   },
   {
@@ -562,6 +460,13 @@
    ],
    "source": [
     "(w[:,1,:]>0.5).sum(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We find that the constitutive model is extremely rarely selected (up to 13/3000 genes in a single dataset)."
    ]
   },
   {
