--- a/gg220529_model_comparison_all.ipynb
+++ b/gg220529_model_comparison_all.ipynb
@@ -3,20 +3,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "colab_type": "text",
-    "id": "view-in-github"
-   },
-   "source": [
-    "<a href=\"https://colab.research.google.com/github/gennadygorin/seq-cme-technoise/blob/dev/gg220406_refactor.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "VPTqP9OGouov"
    },
    "source": [
-    "# *Monod* demonstration: distinguishing the NB and Poisson models"
+    "# *Monod* demonstration: distinguishing models of transcriptional variation"
    ]
   },
   {
@@ -25,7 +15,9 @@
     "id": "d2qrzWG0_Yqm"
    },
    "source": [
-    "In the current notebook, we run the *Monod* pipeline on pre-clustered mouse brain cell data, separately fitting the GABAergic and glutamatergic cell types to the constitutive and bursty models."
+    "We ran the *Monod* inference pipeline on thirteen datasets: pre-clustered mouse brain cell data, disaggregated into GABAergic and glutamatergic cell types, and five 10X Genomics mouse tissue samples. Each dataset was fit using the bursty, constitutive, extrinsic, and CIR models for transcriptional variation, coupled to a Poisson process for cDNA formation.\n",
+    "\n",
+    "Given maximum likelihood estimates under each model, we can apply the standard Akaike Information Criterion framework to attempt to assign probabilities to the models. These estimates are necessarily incomplete, as they do not take into account the parameter uncertainties; further, they appear to overestimate confidence in model selections. However, this is an essential first step toward exploring model ensembles. "
    ]
   },
   {
@@ -121,47 +113,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# result_strings[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['./fits/gg_220527_021_allen_celltypes_1/allen_A08_gaba/raw.sd',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_A08_glu/raw.sd',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_B01_gaba/raw.sd',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_B01_glu/raw.sd',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_B08_gaba/raw.sd',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_B08_glu/raw.sd',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_C01_gaba/raw.sd',\n",
-       " './fits/gg_220527_021_allen_celltypes_1/allen_C01_glu/raw.sd',\n",
-       " './fits/gg_220526_021_modelcomp_1/heart_1k_v3/raw.sd',\n",
-       " './fits/gg_220526_021_modelcomp_1/heart_10k_v3/raw.sd',\n",
-       " './fits/gg_220526_021_modelcomp_1/neuron_1k_v3/raw.sd',\n",
-       " './fits/gg_220526_021_modelcomp_1/neuron_10k_v3/raw.sd',\n",
-       " './fits/gg_220526_021_modelcomp_1/brain_5k_v3/raw.sd']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sd_strings"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
@@ -173,21 +124,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Post-processing"
+    "## AIC weight computation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we iterate over the results for the bursty model, identify the parameter optima, and compute conditional confidence intervals."
+    "Now, we iterate over the results for all of the models, identify the parameter optima, and compute Akaike weights according to the procedure in Burnham and Anderson (2002)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -474,6 +425,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We find that the constitutive model is essentially never selected as the optimal one; biological overdispersion is clearly mandatory to describe scRNA-seq joint distributions. However, surprisingly, we find quite a bit of variation in *which* overdispersed model is optimal."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -516,6 +474,20 @@
    "outputs": [],
    "source": [
     "w1_ = np.asarray([w1[k] for k in (0,2,4,6,1,3,5,7)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inter-dataset comparisons"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nevertheless, despite this instability, we do find certain broadly consistent trends. Technical replicates B08/A08 and B01/C01, when filtered for a particular cell type, tend to give similar weights to the bursty model (KDE has a significant peak at 0 and tends not to have it at 1). GABAergic cells are consistent between biological replicates, but glutamatergic are not, which is somewhat surprising since there are far more glutamatergic cells in the raw datasets."
    ]
   },
   {
