--- a/gg220529_allen_celltypes_de_analysis.ipynb
+++ b/gg220529_allen_celltypes_de_analysis.ipynb
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -756,20 +756,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alternatively, we can find differentially expressed genes by a $t$-test and an analogous fixed-point iteration procedure on the log-means."
+    "Alternatively, we can find differentially expressed genes by a $t$-test and an analogous fixed-point iteration procedure on the log-means. We correct the $t$-test using PFlog1p and knee plot filtering procedure."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "thr = [2e3, 3e3, 2e3, 3e3, 3e3, 3e3, 2e3, 3e3,1e2,1e2,5e2,3e2,6e2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "list indices must be integers or slices, not tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_3526660/853489318.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset_meta\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     de_ttest.append(compute_diffexp(sd_arr[i*2],sd_arr[i*2+1],logscale=True,viz=False,method='ttest',\n\u001b[0;32m----> 5\u001b[0;31m                                     knee_thr=thr[thr[i*2],thr[i*2+1]]))\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;31m#     de_logmeanfpi.append(compute_diffexp(sd_arr[i*2],sd_arr[i*2+1],method='logmeanfpi',modeltype='id',viz=False))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mde_ttest\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mde_ttest\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
+     ]
+    }
+   ],
    "source": [
     "de_ttest = []\n",
     "de_logmeanfpi = []\n",
     "for i in range(len(dataset_meta)):\n",
-    "    de_ttest.append(compute_diffexp(sd_arr[i*2],sd_arr[i*2+1],logscale=True,viz=False,method='ttest'))\n",
-    "    de_logmeanfpi.append(compute_diffexp(sd_arr[i*2],sd_arr[i*2+1],method='logmeanfpi',modeltype='id',viz=False))\n",
+    "    de_ttest.append(compute_diffexp(sd_arr[i*2],sd_arr[i*2+1],logscale=True,viz=False,method='ttest',\n",
+    "                                    knee_thr=thr[thr[i*2],thr[i*2+1]]))\n",
+    "#     de_logmeanfpi.append(compute_diffexp(sd_arr[i*2],sd_arr[i*2+1],method='logmeanfpi',modeltype='id',viz=False))\n",
     "de_ttest=np.asarray(de_ttest)\n",
     "de_logmeanfpi=np.asarray(de_logmeanfpi)"
    ]
