--- a/gg220527_var_decomp.ipynb
+++ b/gg220527_var_decomp.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f88761673a0>"
+       "<matplotlib.legend.Legend at 0x7f425aedbb80>"
       ]
      },
      "execution_count": 9,
@@ -320,7 +320,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f888663ae50>"
+       "<matplotlib.legend.Legend at 0x7f416ad9d310>"
       ]
      },
      "execution_count": 10,
@@ -412,7 +412,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Runtime: 28 seconds.\n"
+      "Runtime: 33 seconds.\n"
      ]
     }
    ],
