what's the deal

--- a/gg220529_allen_celltypes_de_analysis.ipynb
+++ b/gg220529_allen_celltypes_de_analysis.ipynb
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,18 +770,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not tuple",
+     "ename": "NameError",
+     "evalue": "name 'pcount' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_3526660/853489318.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset_meta\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     de_ttest.append(compute_diffexp(sd_arr[i*2],sd_arr[i*2+1],logscale=True,viz=False,method='ttest',\n\u001b[0;32m----> 5\u001b[0;31m                                     knee_thr=thr[thr[i*2],thr[i*2+1]]))\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;31m#     de_logmeanfpi.append(compute_diffexp(sd_arr[i*2],sd_arr[i*2+1],method='logmeanfpi',modeltype='id',viz=False))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mde_ttest\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mde_ttest\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_3526935/1138937356.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mde_logmeanfpi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset_meta\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     de_ttest.append(compute_diffexp(sd_arr[i*2],sd_arr[i*2+1],lognormalize=True,viz=False,method='ttest',\n\u001b[0m\u001b[1;32m      5\u001b[0m                                     knee_thr=[thr[i*2],thr[i*2+1]]))\n\u001b[1;32m      6\u001b[0m \u001b[0;31m#     de_logmeanfpi.append(compute_diffexp(sd_arr[i*2],sd_arr[i*2+1],method='logmeanfpi',modeltype='id',viz=False))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/projects/seq-cme-technoise/analysis.py\u001b[0m in \u001b[0;36mcompute_diffexp\u001b[0;34m(sd1, sd2, sizefactor, lognormalize, pval, method, bonferroni, modeltype, viz, knee_thr)\u001b[0m\n\u001b[1;32m    617\u001b[0m                 \u001b[0mc1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msizefactor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    618\u001b[0m                 \u001b[0mc2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msizefactor\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 619\u001b[0;31m             \u001b[0ms1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mpcount\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mc1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    620\u001b[0m             \u001b[0ms2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms2\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mpcount\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mc2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    621\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlognormalize\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pcount' is not defined"
      ]
     }
    ],
@@ -789,8 +790,8 @@
     "de_ttest = []\n",
     "de_logmeanfpi = []\n",
     "for i in range(len(dataset_meta)):\n",
-    "    de_ttest.append(compute_diffexp(sd_arr[i*2],sd_arr[i*2+1],logscale=True,viz=False,method='ttest',\n",
-    "                                    knee_thr=thr[thr[i*2],thr[i*2+1]]))\n",
+    "    de_ttest.append(compute_diffexp(sd_arr[i*2],sd_arr[i*2+1],lognormalize=True,viz=False,method='ttest',\n",
+    "                                    knee_thr=[thr[i*2],thr[i*2+1]]))\n",
     "#     de_logmeanfpi.append(compute_diffexp(sd_arr[i*2],sd_arr[i*2+1],method='logmeanfpi',modeltype='id',viz=False))\n",
     "de_ttest=np.asarray(de_ttest)\n",
     "de_logmeanfpi=np.asarray(de_logmeanfpi)"
