new analysis nb

--- a/gg220601_allen_celltypes_de_analysis.ipynb
+++ b/gg220601_allen_celltypes_de_analysis.ipynb
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,6 +782,15 @@
     "    de_logmeanfpi.append(compute_diffexp(sd_arr[i*2],sd_arr[i*2+1],method='logmeanfpi',modeltype='id',viz=False))\n",
     "de_ttest=np.asarray(de_ttest)\n",
     "de_logmeanfpi=np.asarray(de_logmeanfpi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compute_diffexp?"
    ]
   },
   {
@@ -829,31 +838,6 @@
    ],
    "source": [
     "dr_params.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.80612549,  0.14498455, -0.01048116, ..., -0.21982085,\n",
-       "        -0.00116987,  0.10447205],\n",
-       "       [ 0.42392447,  0.21356493, -0.11688382, ..., -0.11317503,\n",
-       "        -0.19454471,  0.01550075],\n",
-       "       [ 0.16802088,  0.17009516, -0.08659698, ..., -0.22124232,\n",
-       "        -0.08900317, -0.04190064]])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dr_analysis[-1][3]"
    ]
   },
   {
