--- a/gg220601_allen_celltypes_de_analysis.ipynb
+++ b/gg220601_allen_celltypes_de_analysis.ipynb
@@ -1110,92 +1110,92 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_diffexp_(sd1,sd2,sizefactor = 'pf',lognormalize=True,pcount=0,\n",
-    "                    pval=0.001,method='ttest',bonferroni=True,modeltype='lin',viz=True,knee_thr=None,\n",
-    "                    fc_thr = 1,ax1=None):\n",
-    "    \"\"\"\n",
-    "    This function attempts to identify differentially expressed (DE) genes using a simple comparison of \n",
-    "    the meand of gene-specific count distributions.\n",
+    "# def compute_diffexp_(sd1,sd2,sizefactor = 'pf',lognormalize=True,pcount=0,\n",
+    "#                     pval=0.001,method='ttest',bonferroni=True,modeltype='lin',viz=True,knee_thr=None,\n",
+    "#                     fc_thr = 1,ax1=None):\n",
+    "#     \"\"\"\n",
+    "#     This function attempts to identify differentially expressed (DE) genes using a simple comparison of \n",
+    "#     the meand of gene-specific count distributions.\n",
     "\n",
-    "    Input:\n",
-    "    sd1: SearchData instance 1.\n",
-    "    sd2: SearchData instance 2.\n",
-    "    sizefactor: what size factor to use. \n",
-    "        'pf': Proportional fitting; set the size of each cell to the mean size.\n",
-    "        a number: use this number (e.g., 1e4 for cp10k).\n",
-    "        None: do not do size/depth normalization.\n",
-    "    lognormalize: whether to use a log2-transformation for the t-test.\n",
-    "    pcount: pseudocount added to ensure division by zero does not occur.\n",
-    "    pval: p-value threshold for proposing that a gene is DE.\n",
-    "    method: the DE identification method to use.\n",
-    "        If 'ttest', use scipy.stats.ttest_ind, Welch’s t-test.\n",
-    "        If 'logmeanfpi', use the fixed-point iteration procedure on the distribution of log-means.\n",
-    "        If 'meanlogfpi', use the FPI procedure on the distribution of means of log+1 counts.\n",
-    "    bonferroni: whether to use a multiple comparison correction for the ttest method.\n",
-    "    modeltype: statistical model for variation between means, as in diffreg_fpi.\n",
-    "    viz: whether to visualize the results for non-'ttest' methods.\n",
-    "    knee_thr: knee plot UMI threshold used to filter out low-expression cells.\n",
-    "    fc_thr: fold change threshold for t-test.\n",
-    "    \"\"\"\n",
-    "    s1 = np.copy(sd1.S)\n",
-    "    s2 = np.copy(sd2.S)\n",
+    "#     Input:\n",
+    "#     sd1: SearchData instance 1.\n",
+    "#     sd2: SearchData instance 2.\n",
+    "#     sizefactor: what size factor to use. \n",
+    "#         'pf': Proportional fitting; set the size of each cell to the mean size.\n",
+    "#         a number: use this number (e.g., 1e4 for cp10k).\n",
+    "#         None: do not do size/depth normalization.\n",
+    "#     lognormalize: whether to use a log2-transformation for the t-test.\n",
+    "#     pcount: pseudocount added to ensure division by zero does not occur.\n",
+    "#     pval: p-value threshold for proposing that a gene is DE.\n",
+    "#     method: the DE identification method to use.\n",
+    "#         If 'ttest', use scipy.stats.ttest_ind, Welch’s t-test.\n",
+    "#         If 'logmeanfpi', use the fixed-point iteration procedure on the distribution of log-means.\n",
+    "#         If 'meanlogfpi', use the FPI procedure on the distribution of means of log+1 counts.\n",
+    "#     bonferroni: whether to use a multiple comparison correction for the ttest method.\n",
+    "#     modeltype: statistical model for variation between means, as in diffreg_fpi.\n",
+    "#     viz: whether to visualize the results for non-'ttest' methods.\n",
+    "#     knee_thr: knee plot UMI threshold used to filter out low-expression cells.\n",
+    "#     fc_thr: fold change threshold for t-test.\n",
+    "#     \"\"\"\n",
+    "#     s1 = np.copy(sd1.S)\n",
+    "#     s2 = np.copy(sd2.S)\n",
     "\n",
-    "    if viz and ax1 is  None:\n",
-    "        fig1,ax1 = plt.subplots(1,1)\n",
+    "#     if viz and ax1 is  None:\n",
+    "#         fig1,ax1 = plt.subplots(1,1)\n",
     "\n",
-    "    if method=='ttest':\n",
+    "#     if method=='ttest':\n",
     "\n",
-    "        if knee_thr is not None:\n",
-    "            cf1 = sd1.knee_plot(thr=knee_thr[0])\n",
-    "            cf2 = sd2.knee_plot(thr=knee_thr[1])\n",
-    "            s1 = s1[:,cf1]\n",
-    "            s2 = s2[:,cf2]\n",
+    "#         if knee_thr is not None:\n",
+    "#             cf1 = sd1.knee_plot(thr=knee_thr[0])\n",
+    "#             cf2 = sd2.knee_plot(thr=knee_thr[1])\n",
+    "#             s1 = s1[:,cf1]\n",
+    "#             s2 = s2[:,cf2]\n",
     "\n",
-    "        gf = np.zeros(sd1.n_genes,dtype=bool)\n",
-    "        if bonferroni:\n",
-    "            pval /= sd1.n_genes\n",
-    "        if sizefactor is not None:\n",
-    "            if sizefactor == 'pf':\n",
-    "                c1 = s1.sum(0).mean()\n",
-    "                c2 = s2.sum(0).mean()\n",
-    "            else:\n",
-    "                c1 = sizefactor\n",
-    "                c2 = sizefactor\n",
-    "            s1 = s1/(s1.sum(0)[None,:]+pcount)*c1\n",
-    "            s2 = s2/(s2.sum(0)[None,:]+pcount)*c2\n",
-    "        if lognormalize:\n",
-    "            s1 = np.log2(s1+1)\n",
-    "            s2 = np.log2(s2+1)\n",
-    "        p = np.zeros(sd1.n_genes)\n",
-    "        for i in range(sd1.n_genes):\n",
-    "            _,p_ = scipy.stats.ttest_ind(s1[i],s2[i],equal_var=False)\n",
-    "            if p_<pval:\n",
-    "                gf[i] = True\n",
-    "            p[i] = p_\n",
-    "        fc = s2.mean(1) - s1.mean(1)\n",
-    "        gf = gf & (np.abs(fc)>fc_thr)\n",
-    "        if viz: \n",
-    "            pv = -np.log10(p)\n",
-    "            ax1.scatter(fc[gf],pv[gf],5,'r')\n",
-    "            ax1.scatter(fc[~gf],pv[~gf],3,'darkgray')\n",
-    "            ax1.set_xlabel(r'Fold change ($\\log_2$)')\n",
-    "            ax1.set_ylabel(r'$-\\log_{10} p$')\n",
-    "    else:\n",
-    "        if method=='logmeanfpi':\n",
-    "            m1 = np.log2(s1.mean(1))\n",
-    "            m2 = np.log2(s2.mean(1))\n",
-    "        elif method == 'meanlogfpi':\n",
-    "            m1 = np.log2(s1+1).mean(1)\n",
-    "            m2 = np.log2(s2+1).mean(1)\n",
-    "        gf,offs_,resid_ = diffreg_fpi(m1,m2,'Spliced mean',\\\n",
-    "                         modeltype=modeltype,ax1=ax1,s1=None,s2=None,nit=30,viz=viz,pval=pval)\n",
-    "        gf = m2-m1\n",
-    "        if viz: \n",
-    "            pv = -np.log10(p)\n",
-    "            ax1.scatter(fc[gf],pv[gf],5,'r')\n",
-    "            ax1.scatter(fc[~gf],pv[~gf],3,'darkgray')\n",
+    "#         gf = np.zeros(sd1.n_genes,dtype=bool)\n",
+    "#         if bonferroni:\n",
+    "#             pval /= sd1.n_genes\n",
+    "#         if sizefactor is not None:\n",
+    "#             if sizefactor == 'pf':\n",
+    "#                 c1 = s1.sum(0).mean()\n",
+    "#                 c2 = s2.sum(0).mean()\n",
+    "#             else:\n",
+    "#                 c1 = sizefactor\n",
+    "#                 c2 = sizefactor\n",
+    "#             s1 = s1/(s1.sum(0)[None,:]+pcount)*c1\n",
+    "#             s2 = s2/(s2.sum(0)[None,:]+pcount)*c2\n",
+    "#         if lognormalize:\n",
+    "#             s1 = np.log2(s1+1)\n",
+    "#             s2 = np.log2(s2+1)\n",
+    "#         p = np.zeros(sd1.n_genes)\n",
+    "#         for i in range(sd1.n_genes):\n",
+    "#             _,p_ = scipy.stats.ttest_ind(s1[i],s2[i],equal_var=False)\n",
+    "#             if p_<pval:\n",
+    "#                 gf[i] = True\n",
+    "#             p[i] = p_\n",
+    "#         fc = s2.mean(1) - s1.mean(1)\n",
+    "#         gf = gf & (np.abs(fc)>fc_thr)\n",
+    "#         if viz: \n",
+    "#             pv = -np.log10(p)\n",
+    "#             ax1.scatter(fc[gf],pv[gf],5,'r')\n",
+    "#             ax1.scatter(fc[~gf],pv[~gf],3,'darkgray')\n",
+    "#             ax1.set_xlabel(r'Fold change ($\\log_2$)')\n",
+    "#             ax1.set_ylabel(r'$-\\log_{10} p$')\n",
+    "#     else:\n",
+    "#         if method=='logmeanfpi':\n",
+    "#             m1 = np.log2(s1.mean(1))\n",
+    "#             m2 = np.log2(s2.mean(1))\n",
+    "#         elif method == 'meanlogfpi':\n",
+    "#             m1 = np.log2(s1+1).mean(1)\n",
+    "#             m2 = np.log2(s2+1).mean(1)\n",
+    "#         gf,offs_,resid_ = diffreg_fpi(m1,m2,'Spliced mean',\\\n",
+    "#                          modeltype=modeltype,ax1=ax1,s1=None,s2=None,nit=30,viz=viz,pval=pval)\n",
+    "#         gf = m2-m1\n",
+    "#         if viz: \n",
+    "#             pv = -np.log10(p)\n",
+    "#             ax1.scatter(fc[gf],pv[gf],5,'r')\n",
+    "#             ax1.scatter(fc[~gf],pv[~gf],3,'darkgray')\n",
     "\n",
-    "    return gf,fc"
+    "#     return gf,fc"
    ]
   },
   {
