--- a/gg220601_allen_celltype_splitter.ipynb
+++ b/gg220601_allen_celltype_splitter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6c62c3d7",
+   "id": "e98b5861",
    "metadata": {},
    "source": [
     "This notebook goes through Allen datasets and pulls out specific cell types or subtypes."
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "id": "dbea3e29",
+   "execution_count": 166,
+   "id": "ee6c88f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,13 +20,15 @@
     "import numpy as np\n",
     "import scipy\n",
     "from scipy import sparse\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import time\n",
+    "import os.path\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "e4cd8459",
+   "id": "4188dfc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "0570da04",
+   "id": "5efbc19a",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "26edc45c",
+   "id": "15ffebf4",
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "53e80046",
+   "id": "22a6ab4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "718ec573",
+   "id": "a2d60217",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "b07c574f",
+   "id": "52bce379",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "9d014857",
+   "id": "c650ff8a",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "ca625a99",
+   "id": "53c6f40b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,24 +413,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "451b6820",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "09fa7f6b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 162,
-   "id": "cbf5aed9",
+   "id": "315226f9",
    "metadata": {},
    "outputs": [
     {
@@ -493,18 +479,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0c7556d0",
+   "execution_count": 170,
+   "id": "f066e555",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/ggorin/count_data/allen_A01/counts_filtered/adata.loom\n",
+      "DNE...\tDNE...\tDNE...\tDNE...\t"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_3705561/957588321.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misfile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'DNE...'\u001b[0m \u001b[0;34m,\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'\\t'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m         \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m900\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
-    "datasets = ['A01','D01','E01','F01','G12','H12','F08','G08']\n"
+    "datasets = ['A01','D01','E01','F01','G12','H12','F08','G08']\n",
+    "\n",
+    "\n",
+    "outdir = '/home/ggorin/count_data/loom_allen_celltype_kb/test/'\n",
+    "for d in datasets:\n",
+    "    filename = '/home/ggorin/count_data/allen_{}/counts_filtered/adata.loom'.format(d)\n",
+    "    print(filename)\n",
+    "    while (not os.path.isfile(filename) ) or (os.path.isdir('/home/ggorin/count_data/allen_{}/tmp/'.format(d))):\n",
+    "        print('DNE...' ,end='\\t')\n",
+    "        time.sleep(900)\n",
+    "\n",
+    "    \n",
+    "    with lp.connect(filename) as ds:\n",
+    "        S = ds.layers[spliced_layer][:]\n",
+    "        U = ds.layers[unspliced_layer][:]\n",
+    "        gene_names = ds.ra[gene_attr]\n",
+    "        bcs = ds.ca[cell_attr]\n",
+    "        for celltype in range(n_celltypes):\n",
+    "            S_ = np.copy(S)\n",
+    "            U_ = np.copy(U)\n",
+    "            celltype_exp_bcs = annot_bcs[annot_cid_filter[celltype]]\n",
+    "            cf = np.asarray([True if (x in celltype_exp_bcs) else False for x in bcs])\n",
+    "            S_ = S[:,cf]\n",
+    "            U_ = U[:,cf]\n",
+    "            bc_filt = bcs[cf]\n",
+    "            print('allen_{}_{}: {:.0f} barcodes.'.format(d,celltype_abbr[celltype],cf.sum()))\n",
+    "            \n",
+    "            lp.create(outdir+'/allen_{}_{}.loom'.format(d,celltype_abbr[celltype]),\\\n",
+    "                      layers={'':scipy.sparse.csr_matrix(S_.shape),\n",
+    "                              spliced_layer:S_,\n",
+    "                              unspliced_layer:U_},\\\n",
+    "                              row_attrs={gene_attr:gene_names},\\\n",
+    "                              col_attrs={cell_attr:bc_filt})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "id": "f7eb5ef7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.access('/home/ggorin/count_data/allen_{}/counts_filtered/adata.loom'.format(d), os.R_OK)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "7071ac10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.isdir('/home/ggorin/count_data/allen_{}/tmp/'.format(d))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8e08235",
+   "id": "fbb70fc1",
    "metadata": {},
    "outputs": [],
    "source": []
