--- a/gg220601_allen_celltype_splitter.ipynb
+++ b/gg220601_allen_celltype_splitter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e98b5861",
+   "id": "7648dba6",
    "metadata": {},
    "source": [
     "This notebook goes through Allen datasets and pulls out specific cell types or subtypes."
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "id": "ee6c88f7",
+   "id": "24f64f90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "4188dfc4",
+   "id": "fe8a6f06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "5efbc19a",
+   "id": "30da8f18",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "15ffebf4",
+   "id": "60bb2d01",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "22a6ab4d",
+   "id": "25856bb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "a2d60217",
+   "id": "168b80f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "52bce379",
+   "id": "7a2f4c13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "c650ff8a",
+   "id": "99ff65a8",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "53c6f40b",
+   "id": "373a0ed9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "315226f9",
+   "id": "5918f902",
    "metadata": {},
    "outputs": [
     {
@@ -479,8 +479,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
-   "id": "f066e555",
+   "execution_count": null,
+   "id": "2fc51a9c",
    "metadata": {},
    "outputs": [
     {
@@ -488,18 +488,7 @@
      "output_type": "stream",
      "text": [
       "/home/ggorin/count_data/allen_A01/counts_filtered/adata.loom\n",
-      "DNE...\tDNE...\tDNE...\tDNE...\t"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_3705561/957588321.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misfile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'DNE...'\u001b[0m \u001b[0;34m,\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'\\t'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m         \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m900\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "DNE...\t"
      ]
     }
    ],
@@ -511,10 +500,10 @@
     "for d in datasets:\n",
     "    filename = '/home/ggorin/count_data/allen_{}/counts_filtered/adata.loom'.format(d)\n",
     "    print(filename)\n",
-    "    while (not os.path.isfile(filename) ) or (os.path.isdir('/home/ggorin/count_data/allen_{}/tmp/'.format(d))):\n",
+    "    while (os.path.isdir('/home/ggorin/count_data/allen_{}/tmp/'.format(d))):\n",
     "        print('DNE...' ,end='\\t')\n",
     "        time.sleep(900)\n",
-    "\n",
+    "        #clever async processing\n",
     "    \n",
     "    with lp.connect(filename) as ds:\n",
     "        S = ds.layers[spliced_layer][:]\n",
@@ -541,50 +530,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
-   "id": "f7eb5ef7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 172,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.access('/home/ggorin/count_data/allen_{}/counts_filtered/adata.loom'.format(d), os.R_OK)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 176,
-   "id": "7071ac10",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 176,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.path.isdir('/home/ggorin/count_data/allen_{}/tmp/'.format(d))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "fbb70fc1",
+   "id": "f1f58501",
    "metadata": {},
    "outputs": [],
    "source": []
